# aemonemdata

./: .gitignore  README.md  pyproject.toml
src/aemo_nem_data/: __init__.py  aemonem.py  constants.py  exceptions.py  utils.py
src/aemonemdata/: __init__.py  aemonem.py  constants.py  utils.py
