[project]
name = "aemonemdata"
version = "2024.7.2b3"
authors = [
  { name="Chris Abberley", email="unlisted@gmail.com" },
]
description = "Python Module to support Home Assistant integration with AEMO NEM Data"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
      "aiohttp>=3.8.1",
      "asyncio"
    ]

[project.urls]
Homepage = "https://github.com/cabberley/aemonemdata"
Issues = "https://github.com/cabberley/aemonemdata/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
